examples/errors/pe_expected_header_colon.raq
[request]
POST https://jsonplaceholder.typicode.com/posts

[headers]
Content-Type application/json
